--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,17 @@
 matrix:
   include:
     - os: linux
-      dist: trusty
+      dist: xenial
       sudo: required
       ervices: docker
       env: $DOCKER_IMAGE_TAG=ubuntu:18.04 $SWIFT_PLATFORM=ubuntu18.04 $SWIFT_BRANCH=swift-4.2.1-release $SWIFT_VERSION=swift-4.2.1-RELEASE
     - os: linux
-      dist: trusty
+      dist: xenial
       sudo: required
       ervices: docker
       env: $DOCKER_IMAGE_TAG=ubuntu:16.04 $SWIFT_PLATFORM=ubuntu16.04 $SWIFT_BRANCH=swift-4.1.3-release $SWIFT_VERSION=swift-4.1.3-RELEASE
     - os: linux
-      dist: trusty
+      dist: xenial
       sudo: required
       ervices: docker
       env: $DOCKER_IMAGE_TAG=ubuntu:16.04 $SWIFT_PLATFORM=ubuntu16.04 $SWIFT_BRANCH=swift-4.0.3-release $SWIFT_VERSION=swift-4.0.3-RELEASE
@@ -21,4 +21,4 @@ before_install:
   - docker pull $DOCKER_IMAGE_TAG
 
 script:
-  - docker run -v ${TRAVIS_BUILD_DIR}:${TRAVIS_BUILD_DIR} ${DOCKER_IMAGE_TAG} /bin/bash -c "./CITests/run"
+  - docker run -v ${TRAVIS_BUILD_DIR}:build ${DOCKER_IMAGE_TAG} /bin/bash -c "/build/CITests/run"
