--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,9 +1,16 @@
 disabled_rules:
   - trailing_whitespace
   - void_return
+  - class_delegate_protocol
+  - weak_delegate
+  - type_name
+  - generic_type_name
 included:
   - Sources
 line_length: 150
 function_body_length:
   warning: 50
   error: 75
+function_parameter_count:
+  warning: 8
+  error: 10
