--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,13 @@ matrix:
       services: docker
       env: DOCKER_IMAGE_TAG=swiftlang/swift:nightly-5.4-amazonlinux2 ONLY_RUN_SWIFT_LINT=no USE_APT_GET=no
 
+    # Verify against nightly of Swift mainline
+    - os: linux
+      dist: xenial
+      sudo: required
+      services: docker
+      env: DOCKER_IMAGE_TAG=swiftlang/swift:nightly-amazonlinux2 ONLY_RUN_SWIFT_LINT=no USE_APT_GET=no
+
     # Use a docker image that contains the SwiftLint executable the verify the code against the linter.
     - os: linux
       dist: xenial
