Only use latest distribution for older swift versions.

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,12 +7,28 @@ on:
     branches: [ main ]
       
 jobs:
-  build:
+  LatestVersionBuild:
     name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04]
-        swift: ["5.5.0", "5.4.3", "5.3.3", "5.2.5"]
+        swift: ["5.4.3"]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift }}
+      - uses: actions/checkout@v2
+      - name: Build
+        run: swift build
+      - name: Run tests
+        run: swift test
+  OlderVersionBuild:
+    name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04]
+        swift: ["5.3.3", "5.2.5"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: fwal/setup-swift@v1
