--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04]
-        swift: ["5.4.3"]
+        swift: ["5.5.0"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: tachyonics/setup-swift@6fda489d6be9eda5dc0fae9895da5cc515964521
         with:
           swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v2
@@ -28,10 +28,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        swift: ["5.3.3", "5.2.5"]
+        swift: ["5.4.3", "5.3.3", "5.2.5"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: tachyonics/setup-swift@6fda489d6be9eda5dc0fae9895da5cc515964521
         with:
           swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v2
