Fix build configuration for CI Tests.

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,7 +20,7 @@ jobs:
           swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v2
       - name: Build
-        run: swift build
+        run: swift build -c release
       - name: Run tests
         run: swift test
   OlderVersionBuild:
@@ -36,7 +36,7 @@ jobs:
           swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v2
       - name: Build
-        run: swift build
+        run: swift build -c release
       - name: Run tests
         run: swift test
   SwiftLint:
