--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -21,3 +21,9 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: swift
+
+    - name: Build
+      run: swift build
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
